@@ -18,7 +18,9 @@ QT -= gui
 # json
 win32 {
     CONFIG += qtjson  # GPL/self-contained
-    DEFINES += ECE_WIN32 _CRT_SECURE_NO_WARNINGS
+    DEFINES += _CRT_SECURE_NO_WARNINGS
+    DEFINES += ECE_WIN32
+    DEFINES += ECE_PREFIX_PATH=\\\"/sece\\\"
 } else {
     CONFIG += qjson   # LGPL/external (default)
 }
